sorted sticky summary box. Trying fixed buy/sell page on mobile

--- a/static/styles.css
+++ b/static/styles.css
@@ -8,6 +8,7 @@
     display: flex;
     width: 100vw;
     height: 100%;
+    min-height: 100vh;
     flex-direction: column;
     justify-content: flex-start;
 }
@@ -274,7 +275,8 @@
 .index-body {
     width: 100%;
     max-width: 1040px;
-    padding: 0px 20px 120px 20px;
+    min-height: calc(100vh - 115px);
+    padding: 0px 20px 50px 20px;
     display: flex;
     flex-flow: column;
     justify-content: flex-start;
@@ -465,12 +467,15 @@
 
 /** summary container*/
 .index-body__summary {
+    position: -webkit-sticky;
+    position: sticky;
+    bottom: 0;
     width: 100%;
-    height: 120px;
-    padding: 20px 20px;
+    height: 100px;
+    padding: 10px 20px;
     text-decoration: none;
     border-radius: 10px;
-    background-color: rgb(137, 227, 255);
+    background-color: rgb(64, 161, 241);
 }
 
 /** summary item */
@@ -479,7 +484,7 @@
     height: 100%;
     display: grid;
     grid-template-columns: 1fr 150px 30px 80px;
-    grid-template-rows: 20px 20px 40px;
+    grid-template-rows: 23px 23px 30px;
     justify-content: center;
 }
 
@@ -487,8 +492,9 @@
 .sitem__each {
     display: flex;
     flex-direction: row;
-    align-items: flex-end;
-    font-size: 10px;
+    align-items: center;
+    font-size: 12px;
+    color:antiquewhite;
 }
 
 /** position for cashtxt **/
@@ -507,7 +513,8 @@
 .sitem__each--cash {
     grid-column: 4 / 5;
     grid-row: 1 / 2;
-    font-size: 15px;
+    font-size: 17px;
+    justify-content: flex-end;
 }
 
 /** position for cashtxt **/
@@ -526,7 +533,8 @@
 .sitem__each--return {
     grid-column: 4 / 5;
     grid-row: 2 / 3;
-    font-size: 15px;
+    font-size: 17px;
+    justify-content: flex-end;
 }
 
 /** position for cashtxt **/
@@ -545,21 +553,13 @@
 .sitem__each--equity {
     grid-column: 4 / 5;
     grid-row: 3 / 4;
-    font-size: 18px;
+    font-size: 20px;
+    justify-content: flex-end;
 }
 
 /** filler section **/
 .filler {
     flex: 5;
-}
-
-
-/** sticky box bottom **/
-.index-body__sticky {
-    width: 100%;
-    max-width: 1000px;
-    height: 100px;
-    background-color: burlywood;
 }
 
 /** view container **/
@@ -648,7 +648,7 @@
 .view-buttons--buysell {
     width: 400px;
     max-width: 400px;
-    padding: 20px 5px 120px 5px;
+    padding: 20px 5px 30px 5px;
     display: flex;
     flex-direction: row;
     justify-content: space-around;
@@ -816,12 +816,12 @@
 
 /** absolute menu page for buy/sell */
 .buysell-menu {
-    position: absolute;
+    position: fixed;
     max-width: 600px;
     width: 90%;
     height: 550px;
-    top:50%;
-    left:50%;
+    top: 50%;
+    left: 50%;
     transform: translate(-50%, -50%);
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
     background: rgb(236, 247, 255);
